--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
-always-auth=false
+always-auth=true
+registry=https://nexus.dear.com.ru/repository/gp-gasps-npm-group/
+@gp-frontend:registry=https://nexus.dear.com.ru/repository/gp-gasps-npm-group/
+@gp-frontend-lib:registry=https://nexus.dear.com.ru/repository/gp-gasps-npm-group/
+@soarsecom:registry=https://nexus.dear.com.ru/repository/gp-gasps-npm-group/
+
+//nexus.dear.com.ru/repository/gp-gasps-npm-group/:_auth=Z3AtZ2FzcHMtYWRtaW46aThUZnhUJXVOaGMl
+//nexus.dear.com.ru/repository/:_authToken=NpmToken.0afb4472-2363-3e95-a676-70c51154b4c4
